@@ -1,3 +1,4 @@
+compile
 tags
 py*
 anjuta.anjuta
