@@ -13,7 +13,7 @@ if BUILD_MOZEMBED
 SUBDIRS += libtinymailui-mozembed 
 endif
 
-SUBDIRS += $(PLATFORMDIR) libtinymail-camel tinymail docs bindings po tests
+SUBDIRS += $(PLATFORMDIR) libtinymail-camel tinymail docs bindings po tests 
 
 if BUILD_UNITTESTS
 SUBDIRS += libtinymail-test 
