@@ -1010,22 +1010,25 @@ tny_folder_get_folders (TnyFolderStoreIface *self, TnyListIface *list, TnyFolder
 	{			
 	  iter = iter->child;
 		
-	  while (iter && _tny_folder_store_query_passes (query, iter))
+	  while (iter)
   	  {
-		TnyFolder *folder = tny_folder_new ();
-		_tny_folder_set_id (folder, iter->full_name);
-		_tny_folder_set_folder_type (folder, iter);
-		_tny_folder_set_unread_count (folder, iter->unread);
-		_tny_folder_set_all_count (folder, iter->total);
-		_tny_folder_set_name (folder, iter->name);
-		_tny_folder_set_iter (folder, iter);
-		
-		apriv->managed_folders = g_list_prepend (apriv->managed_folders, folder);
-		
-    		tny_folder_iface_set_account (TNY_FOLDER_IFACE (folder), 
-			TNY_ACCOUNT_IFACE (priv->account));
+		if (_tny_folder_store_query_passes (query, iter))
+		{
+			TnyFolder *folder = tny_folder_new ();
+			_tny_folder_set_id (folder, iter->full_name);
+			_tny_folder_set_folder_type (folder, iter);
+			_tny_folder_set_unread_count (folder, iter->unread);
+			_tny_folder_set_all_count (folder, iter->total);
+			_tny_folder_set_name (folder, iter->name);
+			_tny_folder_set_iter (folder, iter);
+			
+			apriv->managed_folders = g_list_prepend (apriv->managed_folders, folder);
+			
+			tny_folder_iface_set_account (TNY_FOLDER_IFACE (folder), 
+				TNY_ACCOUNT_IFACE (priv->account));
 
-	    	tny_list_iface_prepend (list, G_OBJECT (folder));
+			tny_list_iface_prepend (list, G_OBJECT (folder));
+		}	    
 		iter = iter->next;
 	  }
 	}
