@@ -1,0 +1,27 @@
+#ifndef TNY_FOLDER_STORE_QUERY_TEST_H
+#define TNY_FOLDER_STORE_QUERY_TEST_H
+
+/* tinymail - Tiny Mail gunit test
+ * Copyright (C) 2006-2007 Philip Van Hoof <pvanhoof@gnome.org>
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with self program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ */
+
+#include "tny-test-suite.h"
+
+/* Test suite */
+GUnitTestSuite *create_tny_folder_store_query_suite (void);
+
+#endif
