@@ -1,3 +1,7 @@
+2006-08-28  Philip Van Hoof <pvanhoof@gnome.org>
+
+	*  Added a unit test for TnyFolderStoreQuery
+	
 2006-08-27  Philip Van Hoof <pvanhoof@gnome.org>
 
 	* Bugfix when switching offline and online and again getting a
